--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,6 +6,7 @@
 
 .header {
     padding: 45px 0;
+    max-height: 120px;
     &__inner {
         display: flex;
         justify-content: space-between;
@@ -15,6 +16,9 @@
         background-color: transparent;
         border: none;
         cursor: pointer;
+    }
+    &__btn-menu {
+        display: none;
     }
 }
 
@@ -178,7 +182,7 @@
     right: 0;
     top: 0;
     bottom: 0;
-    
+    overflow-y: auto;
     max-width: 694px;
     width: 100%;
     background-color: white;
@@ -240,12 +244,15 @@
     position: relative;
     &__list {
         display: flex;
+        overflow-x: auto;
     }
     &__item {
+        position: relative;
+        padding-right: 8px;
         &::after {
+            position: absolute;
             content: "/";
-            margin-left: -4px;
-            margin-right: 4px;
+
         }
     }
     &__item:last-child {
@@ -1138,5 +1145,142 @@
         padding: 40px 0 32px;
         border-top: 1px solid #DFDFDF;
         border-bottom: 1px solid #DFDFDF;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 35px;
+    }
+    &__link {
+        width: 243px;
+        position: relative;
+        color: #707070;
+        font-size: 14px;
+        font-weight: 600;
+        &::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            
+            width: 12px;
+            height: 23px;
+        }
+    }
+    &__link-next {
+        padding-right: 44px;
+        text-align: right;
+        &::before {
+            background-image: url(../images/arrow-next.svg);
+            right: 0;
+        }
+    }
+    &__link-prev {
+        padding-left: 44px;
+        &::before {
+            background-image: url(../images/arrow-prev.svg);
+            left: 0;
+        }
+    }
+    &__comments {
+        margin-bottom: 40px;
+    }
+    &__comments-title {
+        color: $title;
+        @extend %title-font;
+        line-height: 31px;
+        font-size: 20px;
+        margin-bottom: 15px;
+    }
+    &__comments-item {
+        display: flex;
+        justify-content: space-between;
+        align-items: start;
+    }
+    &__comments-avatar {
+        width: 64px;
+        height: 64px;
+        object-fit: cover;
+        border-radius: 50%;
+        margin-right: 13px;
+    }
+    &__comments-name {
+        color: $title;
+        @extend %title-font;
+        line-height: 23px;
+    }
+    &__comments-date {
+        margin-bottom: 10px;
+        font-weight: 400;
+        font-size: 14px;
+        color: #A1A1A1;
+    }
+    &__reply {
+        background-color: transparent;
+        border: none;
+        margin-left: 5px;
+        padding: 0;
+        font-size: 14px;
+        font-weight: 600;
+        color: #707070;
+        cursor: pointer;
+    }
+    &__form {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    &__form-title {
+        color: $title;
+        margin-bottom: 25px;
+        @extend %title-font;
+        line-height: 23px;
+    }
+    &__form-textarea {
+        width: 100%;
+        padding: 14px 17px;
+        border-radius: 24px;
+        border: 1px solid #DFDFDF;
+        min-height: 125px;
+        margin-bottom: 12px;
+        resize: none;
+        &::placeholder {
+            color: #A1A1A1;
+            font-size: 16px;
+            font-family: "Open Sans", sans-serif;
+            font-weight: 400;
+            line-height: 27px;
+        }
+    }
+    &__form-input {
+        width: 49%;
+        border-radius: 20px;
+        border: 1px solid #DFDFDF;
+        margin-bottom: 20px;
+        padding: 6px 17px;
+        &::placeholder {
+            color: #A1A1A1;
+            font-size: 16px;
+            font-family: "Open Sans", sans-serif;
+            font-weight: 400;
+            line-height: 27px;
+        }
+    }
+    &__form-label {
+        width: 100%;
+        margin-bottom: 20px;
+        font-size: 14px;
+        color: #A1A1A1;
+    }
+    &__form-btn {
+        padding: 6px 12px;
+        min-width: 180px;
+        background-color: $title;
+        border-radius: 21px;
+        border: none;
+
+        font-weight: 600;
+        color: #FFFFF0;
+        cursor: pointer;
     }
 }
+
+@import "media";
