--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -173,7 +173,7 @@
         color: #A1A1A1;
         text-align: center;
         padding: 42px 0px 41px;
-    } 
+    }  
 }
 
 .rightside-menu {
@@ -761,6 +761,9 @@
 .map {
     margin-top: -53px;
     margin-bottom: 50px;
+    iframe {
+        height: 578px;
+    }
 }
 
 .contact {
@@ -876,7 +879,7 @@
         top: 0;
         bottom: 0;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
         color: $title;
         background-color: rgba(#fff, .6);
